# "ChangeLog"

2012-04-05	David Fang		<fangism@users.sourceforge.net>
	Accumulate basic/dynamic strategy edges, both a priori (before hand
		is dealt), and a posteriori (after seeing initial deal).
		The purpose is to tell how lucky your initial hands are.

2012-04-04	David Fang		<fangism@users.sourceforge.net>
	Option to show count with edges when dynamic != basic.

2012-04-02	David Fang		<fangism@users.sourceforge.net>
	Added option to always-show-dynamic-edge between hands.

2012-04-01	David Fang		<fangism@users.sourceforge.net>
	Added bookmarking feature to save 'interesting' hands.

2012-03-30	David Fang		<fangism@users.sourceforge.net>
	Fixed edit_deck command, added test cases for single-deck
	sensitivity analysis, and sample 6-deck auto-play sessions.

2012-03-26	David Fang		<fangism@users.sourceforge.net>
	Separated hit-split-aces from resplit-aces.
	Started math documentation.

2012-03-18	David Fang		<fangism@users.sourceforge.net>
	Added strategy menu commands for dumping computation information.

2012-03-15	David Fang		<fangism@users.sourceforge.net>
	Added regression test infrastructure.

2012-03-15	David Fang		<fangism@users.sourceforge.net>
	Build is autotoolized (autoconf, automake, libtool).

2012-03-14	David Fang		<fangism@users.sourceforge.net>
	Project relocated to github.  Add .gitignore.
	Current state of project: there exists an interactive simulator
	capable of analyzing count-sensitive edges and optimal actions.
