@@ -37,6 +37,9 @@ bookmark::dump(ostream& o) const {
 	// don't distinguish face cards, only show remaining, not used cards
 	o << "dealer: " << card_name[dealer_reveal] << ", ";
 	player_hand.dump_player(o) << endl;
+	o << "options: double:" << (may_double ? "yes" : "no");
+	o << ", split:" << (may_split ? "yes" : "no");
+	o << ", surrender:" << (may_surrender ? "yes" : "no") << endl;
 }
 
 //=============================================================================
