@@ -875,6 +875,9 @@ min bankroll: 94.5
 max bankroll: 102.5
 current bankroll: 102
 hands played: 44
+decisions made: 54
+wrong decisions (basic): 0
+wrong decisions (dynamic): 0
 initial bets: 44
 total bets: 57
 Edges before each hand dealt (a priori): {
@@ -945,16 +948,19 @@ card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  14  18  15  17  16  16  14  17  67  15	209	(67%)
 hi-lo: 2, true-count: 0.5
 dealer: 3, player: 48 (12)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  14  16  13  16  16  14  13  15  63  14	194	(62%)
 hi-lo: 2, true-count: 0.54
 dealer: Q, player: 5J (15)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	   6   7   4   9   5   3   5   6  32   6	83	(27%)
 hi-lo: 7, true-count: 4.4
 dealer: 9, player: 4J (14)
+options: double:yes, split:no, surrender:yes
 
 ------ end bookmarks ------
 table> 
