@@ -908,6 +908,9 @@ min bankroll: 98
 max bankroll: 106
 current bankroll: 101
 hands played: 45
+decisions made: 60
+wrong decisions (basic): 0
+wrong decisions (dynamic): 0
 initial bets: 45
 total bets: 48
 Edges before each hand dealt (a priori): {
@@ -978,6 +981,7 @@ card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  13  19  14  15  15  17  14  13  41   9	170	(54%)
 hi-lo: -26, true-count: -8
 dealer: 3, player: 3Q (13)
+options: double:yes, split:no, surrender:yes
 
 ------ end bookmarks ------
 table> 
