@@ -951,6 +951,9 @@ min bankroll: 92.5
 max bankroll: 100.5
 current bankroll: 93.5
 hands played: 47
+decisions made: 59
+wrong decisions (basic): 0
+wrong decisions (dynamic): 0
 initial bets: 47
 total bets: 48
 Edges before each hand dealt (a priori): {
@@ -1021,41 +1024,49 @@ card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  19  17  21  19  17  15  19  19  67  15	228	(73%)
 hi-lo: -11, true-count: -2.5
 dealer: A, player: 74 (11)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  14  15  20  16  13  12  13  12  49  14	178	(57%)
 hi-lo: -15, true-count: -4.4
 dealer: J, player: 87 (15)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  12  12  18  13  13  11  13  12  45  13	162	(52%)
 hi-lo: -10, true-count: -3.2
 dealer: 2, player: J3 (13)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  11  10  16  12  13  11  13  11  41  13	151	(48%)
 hi-lo: -8, true-count: -2.8
 dealer: 4, player: 2K (12)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	   7  10  13  10  10   9  10   9  24   9	111	(36%)
 hi-lo: -17, true-count: -8
 dealer: K, player: T6 (16)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	   6   8  12   7   8   9  10   7  20   8	95	(30%)
 hi-lo: -13, true-count: -7.1
 dealer: 3, player: 3J (13)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	   6   6  12   7   8   8  10   7  19   8	91	(29%)
 hi-lo: -12, true-count: -6.9
 dealer: 3, player: 37 (10)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	   5   6  11   6   7   8   7   7  19   8	84	(27%)
 hi-lo: -8, true-count: -5
 dealer: 2, player: 58 (13)
+options: double:yes, split:no, surrender:yes
 
 ------ end bookmarks ------
 table> 
