@@ -903,6 +903,9 @@ min bankroll: 95
 max bankroll: 104.5
 current bankroll: 104.5
 hands played: 45
+decisions made: 56
+wrong decisions (basic): 0
+wrong decisions (dynamic): 0
 initial bets: 45
 total bets: 52
 Edges before each hand dealt (a priori): {
@@ -973,16 +976,19 @@ card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  14  18  15  17  16  16  14  17  67  15	209	(67%)
 hi-lo: 2, true-count: 0.5
 dealer: 3, player: 48 (12)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  13  16  15  16  16  14  13  14  62  15	194	(62%)
 hi-lo: 1, true-count: 0.27
 dealer: Q, player: 5J (15)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	   4   8   9   8  11   9   7   5  25   9	95	(30%)
 hi-lo: -6, true-count: -3.3
 dealer: 3, player: 2634 (15)
+options: double:no, split:no, surrender:no
 
 ------ end bookmarks ------
 table> 
