@@ -955,6 +955,9 @@ min bankroll: 93
 max bankroll: 111
 current bankroll: 111
 hands played: 45
+decisions made: 63
+wrong decisions (basic): 0
+wrong decisions (dynamic): 0
 initial bets: 45
 total bets: 47
 Edges before each hand dealt (a priori): {
@@ -1025,11 +1028,13 @@ card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  24  23  23  24  22  24  22  22  90  23	297	(95%)
 hi-lo: -3, true-count: -0.53
 dealer: T, player: 69 (15)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  12  13  15  17  14  14   9  14  49  16	173	(55%)
 hi-lo: -6, true-count: -1.8
 dealer: Q, player: T6 (16)
+options: double:yes, split:no, surrender:yes
 
 ------ end bookmarks ------
 table> 
