@@ -1031,6 +1031,9 @@ min bankroll: 92
 max bankroll: 100
 current bankroll: 98
 hands played: 46
+decisions made: 70
+wrong decisions (basic): 0
+wrong decisions (dynamic): 0
 initial bets: 46
 total bets: 52
 Edges before each hand dealt (a priori): {
@@ -1101,31 +1104,37 @@ card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  23  23  22  23  23  19  19  23  90  22	287	(92%)
 hi-lo: -2, true-count: -0.36
 dealer: T, player: 87 (15)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  23  23  22  22  23  19  19  23  88  22	284	(91%)
 hi-lo: -3, true-count: -0.55
 dealer: J, player: 5K (15)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  19  16  14  16  15  14  14  17  64  15	204	(65%)
 hi-lo: -1, true-count: -0.25
 dealer: 3, player: T2 (12)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  19  16  12  12  14  12  14  17  57  14	187	(60%)
 hi-lo: -2, true-count: -0.56
 dealer: J, player: 4T (14)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  14  15   6   8   7   8  12  16  40   8	134	(43%)
 hi-lo: -2, true-count: -0.78
 dealer: Q, player: 626 (14)
+options: double:no, split:no, surrender:no
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  13  15   6   8   7   8  12  16  40   8	133	(43%)
 hi-lo: -1, true-count: -0.39
 dealer: Q, player: 6262 (16)
+options: double:no, split:no, surrender:no
 
 ------ end bookmarks ------
 table> 
