@@ -968,6 +968,9 @@ min bankroll: 92.5
 max bankroll: 101
 current bankroll: 96.5
 hands played: 47
+decisions made: 65
+wrong decisions (basic): 0
+wrong decisions (dynamic): 0
 initial bets: 47
 total bets: 51
 Edges before each hand dealt (a priori): {
@@ -1038,21 +1041,25 @@ card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  20  15  15  18  16  16  14  16  62  13	205	(66%)
 hi-lo: -9, true-count: -2.3
 dealer: A, player: 92 (11)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  17  12   9  15  14  14  12  14  45   9	161	(52%)
 hi-lo: -13, true-count: -4.2
 dealer: 3, player: 54 (9)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  16  12   9  14  13  13  12   9  40   7	145	(46%)
 hi-lo: -17, true-count: -6.1
 dealer: 9, player: Q6 (16)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  13  12   9  13  11  12   9   8  35   5	127	(41%)
 hi-lo: -18, true-count: -7.4
 dealer: 7, player: 28 (10)
+options: double:yes, split:no, surrender:yes
 
 ------ end bookmarks ------
 table> 
