@@ -951,6 +951,9 @@ min bankroll: 91
 max bankroll: 103
 current bankroll: 91
 hands played: 45
+decisions made: 61
+wrong decisions (basic): 0
+wrong decisions (dynamic): 0
 initial bets: 45
 total bets: 52
 Edges before each hand dealt (a priori): {
@@ -1021,21 +1024,25 @@ card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  23  24  24  23  21  24  22  22  94  21	298	(96%)
 hi-lo: 0, true-count: 0
 dealer: 2, player: A6 (A,6)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  20  21  21  21  19  19  18  19  84  21	263	(84%)
 hi-lo: 3, true-count: 0.59
 dealer: 2, player: 84 (12)
+options: double:yes, split:no, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	  12  14  12  15  10  12  14  14  54  17	174	(56%)
 hi-lo: 8, true-count: 2.4
 dealer: 8, player: 77 (7,7)
+options: double:yes, split:yes, surrender:yes
 
 card:	   2   3   4   5   6   7   8   9   T   A	total	%
 rem:	   7   9   5   8   8   7   9  11  29   3	96	(31%)
 hi-lo: -5, true-count: -2.7
 dealer: 8, player: 592 (16)
+options: double:no, split:no, surrender:no
 
 ------ end bookmarks ------
 table> 
