@@ -1,5 +1,8 @@
 # "ChangeLog"
 
+2012-04-07	David Fang		<fangism@users.sourceforge.net>
+	Track wrong decisions relative to basic/dynamic strategy.
+
 2012-04-05	David Fang		<fangism@users.sourceforge.net>
 	Accumulate basic/dynamic strategy edges, both a priori (before hand
 		is dealt), and a posteriori (after seeing initial deal).
